# portmidi-sharp

./: PortMidiSharp.cs  README
portmidi-patches/: README  portmidi-autotoolize-linux.tar.bz2  portmidi-autotoolize-osx.tar.bz2  portmidi-autotoolize-win32-20091011.tar.bz2  portmidi-autotoolize.tar.bz2
portmidi-patches/autotoolize/: Makefile.am  autogen.sh  configure.in
portmidi-patches/autotoolize/pm_linux/: Makefile.am
portmidi-patches/autotoolize/pm_mac/: Makefile.am
portmidi-patches/autotoolize/pm_win/: Makefile.am  build-dll.sh
portmidi-patches/autotoolize/porttime/: Makefile.am  build-dll.sh
samples/: Driver.cs  PortMidiPlayer.cs  SMF.cs  WebClientDriver.cs  WebMidiPlayer.cs  WebMidiPlayerService.cs  build.sh
samples/bulkdump/: README  bulkdump.cs
samples/midi-module-db/: Makefile  MidiModuleDatabase.cs  domino-importer.cs
samples/mmk/: Makefile  mmk.cs  tonelist.txt
